--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,5 +29,21 @@ services:
       timeout: 5s
       retries: 5
   
+  mongo-express:
+    image: mongo-express:1.0
+    restart: always
+    depends_on:
+      - mongo
+    ports:
+      - '8081:8081'
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_MONGODB_PORT: 27017
+      # If you enabled authentication on Mongo, set these:
+      # ME_CONFIG_MONGODB_ADMINUSERNAME: yourUser
+      # ME_CONFIG_MONGODB_ADMINPASSWORD: yourPass
+      ME_CONFIG_BASICAUTH_USERNAME: hos      # credentials for mongo-express UI
+      ME_CONFIG_BASICAUTH_PASSWORD: hos
+  
 volumes:
   mongo_data:
